...
                    NavigationLink(destination: NewProfileView(name:"Mayor")) {
                        Text("Horse")
                    }.frame(width: UIScreen.main.bounds.width*0.2, height: UIScreen.main.bounds.width*0.2)
                    .foregroundColor(Color.white)
                    .background(Color(red: 102/255, green: 172/255, blue: 189/255, opacity: 1.0)).clipShape(/*@START_MENU_TOKEN@*/Circle()/*@END_MENU_TOKEN@*/)
                    NavigationLink(destination: BarnDataView()) {
                        Text("Barn Data")
                    }.frame(width: UIScreen.main.bounds.width*0.2, height: UIScreen.main.bounds.width*0.2)
                    .foregroundColor(Color.white)
                    .background(Color(red: 102/255, green: 172/255, blue: 189/255, opacity: 1.0)).clipShape(/*@START_MENU_TOKEN@*/Circle()/*@END_MENU_TOKEN@*/)
                    Text("Schedule").font(.system(size:UIScreen.main.bounds.height*0.025)).frame(width: UIScreen.main.bounds.width*0.2, height: UIScreen.main.bounds.width*0.2)
                    .foregroundColor(Color.white)
                    .background(Color(red: 102/255, green: 172/255, blue: 189/255, opacity: 1.0)).clipShape(/*@START_MENU_TOKEN@*/Circle()/*@END_MENU_TOKEN@*/)
                }
                
                
            }
            .padding(EdgeInsets(top: 0, leading: UIScreen.main.bounds.width*0.092, bottom: 0, trailing: UIScreen.main.bounds.width*0.092)).navigationBarTitle("TACKtical", displayMode: .inline)
        }.onAppear() {
            UINavigationBar.appearance().backgroundColor = UIColor(red: 102/255, green: 172/255, blue: 189/255, alpha:1)
        }
    }
}

...
