...
                HStack(spacing: 60) {
                    
                    Button(action: {
                                        
                        self.calendarData.crntPage = Calendar.current.date(byAdding: .month, value: -1, to: self.calendarData.crntPage)!
                        
                    }) { Image(systemName: "arrow.left") }
                        .frame(width: 35, height: 35, alignment: .leading)
                
                    NavigationLink(destination: ChooseEventView(date: calendarData.selectedDate)) {
                        Text("+").font(.system(size: 25))
                    }.frame(width: UIScreen.main.bounds.width*0.1, height:UIScreen.main.bounds.width*0.1)
                    .foregroundColor(Color.white)
                    .background(Color(red: 102/255, green: 172/255, blue: 189/255, opacity: 1.0))
                    
                    Button(action: {
                        
                        self.calendarData.crntPage = Calendar.current.date(byAdding: .month, value: 1, to: self.calendarData.crntPage)!
                        
                    }) { Image(systemName: "arrow.right") }
                    .frame(width: 35, height: 35, alignment: .trailing)
                }
                
                
                
                CustomCalendar(dateSelected: $calendarData.selectedDate, mnthNm: $calendarData.titleOfMonth, pageCurrent: $calendarData.crntPage)
...
