...
    var id: String
    //@Environment(\.presentationMode) var presentationMode
    
    @ObservedObject private var viewModel = HorseViewModel()
    var colorChoices = ["Bay", "Chestnut", "Gray", "Dun"]
    var genderChoices = ["Male", "Female"]
    var heightChoices = ["10", "11", "12", "13", "14", "15", "16"]
    var feedChoices = ["Pasture Grass", "Hay", "Grains", "Salt & Minerals", "Bran", "Garden Refuse", "Fruit & Veggie"]
    @State var url = ""
    @State private var showPopUp: Bool = false
    
    
    var body: some View {
...
                        Text("Email: " + viewModel.instructor.email).font(.system(size:UIScreen.main.bounds.height*0.025))
                        Text("Phone: " + viewModel.instructor.phone).font(.system(size:UIScreen.main.bounds.height*0.025))
                    }.padding(UIScreen.main.bounds.height*0.005)
                
                    VStack(alignment: .center, spacing: UIScreen.main.bounds.height*0.01){
                        NavigationLink(destination: NewRiderProfileView(id: viewModel.instructor.student)) {
                            Text("Student Profile").font(.system(size:UIScreen.main.bounds.height*0.025))
                        }.disabled(viewModel.instructor.student == "").frame(width:UIScreen.main.bounds.width*0.6, height:UIScreen.main.bounds.height*0.008, alignment:.center).foregroundColor(.white).padding(UIScreen.main.bounds.height*0.02).background(Color(red: 102/255, green: 172/255, blue: 189/255, opacity: 1.0)).cornerRadius(16)
                    }.padding(UIScreen.main.bounds.height*0.005)
                }
                .padding(EdgeInsets(top: UIScreen.main.bounds.height*0.05, leading: UIScreen.main.bounds.width*0.15, bottom: 0, trailing: UIScreen.main.bounds.width*0.15)).navigationBarTitle("Instructor Profile", displayMode: .inline)
                PopUpWindowforInstructor(title: "Notice", message: "Sure about deleting this?", buttonText1: "Yes", buttonText2: "No", instructor: viewModel.instructor, show: $showPopUp)
            }
...
